--- a/2017-12-29_Briar_at_34c3.html
+++ b/2017-12-29_Briar_at_34c3.html
@@ -17,6 +17,12 @@
 		<link rel="stylesheet" href="css/theme/black.css" id="theme">
 		<link rel="stylesheet" href="css/custom.css">
 
+		<style>
+			.reveal .progress {
+				color: #a41c31;
+			}
+		</style>
+
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -38,14 +44,20 @@
 					<aside class="notes" data-markdown>
 						* Communication Tool
 						* Developed since 2012
+						* Yet Another Messenger?
 					</aside>
 				</section>
 
 				<!-- Security & Resilience -->
 				<section style="font-size: 114pt;">
-						Security<br/>
-						&<br/>
-						Resilience
+					Security<br/>
+					&amp;<br/>
+					Resilience
+
+					<aside class="notes" data-markdown>
+						* Threats users of messengers face
+						* See if there's still work to be done
+					</aside>
 				</section>
 
 				<!-- Eavesdropping -->
@@ -60,6 +72,10 @@
 				<section style="font-size: 65pt;">
 					End-to-End Encryption
 					<img data-src="images/encryption_end_to_end.svg" class="stretch"/>
+					<aside class="notes" data-markdown>
+					* largely solved
+					* even in user-friendly way
+					</aside>
 				</section>
 
 				<!-- Non e2e Messengers -->
@@ -88,11 +104,22 @@
 					<aside class="notes" data-markdown>
 						They analyze our social patterns, we want anonymity
 
-						Largely ignored problem
+						* largely ignored problem
+						* but a very important one
+						* often all your adversary needs to know
 					</aside>
 				</section>
 
 				<!-- Metadata 2 -->
+				<section>
+					<video class="stretch" data-autoplay>
+						<source data-src="videos/kill-people-based-on-metadata.webm" type="video/webm" />
+					</video>
+					<span style="font-size: 23pt; float: right; text-align: left;">
+						Michael Hayden<br/>
+						former director of CIA and NSA
+					</span>
+				</section>
 				<section>
 					<img data-src="images/metadata-hayden.jpg" class="stretch"/>
 					<blockquote>
@@ -100,8 +127,12 @@
 					</blockquote>
 					<span style="font-size: 23pt; float: right; text-align: left;">
 						Michael Hayden<br/>
-						former CIA and NSA director
+						former director of CIA and NSA
 					</span>
+					<aside class="notes" data-markdown>
+						* was talking about phone records
+						* distinction: domestic vs. foreign
+					</aside>
 				</section>
 
 				<!-- Metadata Messengers -->
@@ -113,11 +144,8 @@
 					</div>
 
 					<aside class="notes" data-markdown>
-						Phone numbers as identifies centrally stored
-
-						→ Juciy Target
-
-						Timing Attacks
+						* Phone numbers as identifiers centrally stored → Juicy Target
+						* Timing Attacks
 					</aside>
 				</section>
 
@@ -125,10 +153,8 @@
 				<section data-background-image="images/internet-blocked-china.png" data-background-size="contain">
 					<aside class="notes" data-markdown>
 						Censorship and Service Blocking
-
-						They block our stuff, we want it accessible
-
-						Circumvention only for technical elite
+						* They block our stuff, we want it accessible
+						* Circumvention only for technical elite
 					</aside>
 				</section>
 				<section data-background-image="images/internet-blocked-turkey.png" data-background-size="contain"></section>
@@ -137,11 +163,9 @@
 				<!-- Internet Shutdowns -->
 				<section data-background-image="images/internet-shutdown-kill-switch.jpg" data-background-size="contain">
 					<aside class="notes" data-markdown>
-						Internet Shutdowns - They pull the plug and we cry
-
-						Suppression instrument where reliance on internet is still small
-
-						Total blackout means zero access, zero communication
+						Internet Shutdowns
+						* They pull the plug and we lose all access
+						* Suppression instrument where reliance on internet is still small
 					</aside>
 				</section>
 				<section data-background-image="images/internet-shutdown-cameroon.jpg" data-background-size="contain"></section>
@@ -152,8 +176,8 @@
 				<!-- Meet Briar -->
 				<section data-background-image="images/logo-briar.svg" data-background-size="contain">
 					<aside class="notes" data-markdown>
-						* How does Briar work?
-						* And how does this address these threats?
+						* How does it work?
+						* How does it address these threats?
 					</aside>
 				</section>
 
@@ -165,18 +189,29 @@
 				<section>
 					<img data-src="images/logo-bluetooth.svg" width="400" height="400"/>
 					<img data-src="images/logo-wifi.svg" width="400" height="400"/>
+					<aside class="notes" data-markdown>
+						* helps against internet shutdown or catastrophes
+						* short range, good for densely populated areas
+					</aside>
 				</section>
 				<section data-background-image="images/data-transport-satellite.jpg" data-background-size="contain"></section>
 				<section data-background-image="images/data-transport-ham-radio.jpg" data-background-size="contain"></section>
-				<section data-background-image="images/data-transport-pigeon.jpg" data-background-size="contain"></section>
+				<section data-background-image="images/data-transport-pigeon.jpg" data-background-size="contain">
+					<aside class="notes" data-markdown>
+						Sneakernet
+						* only partly a joke, it really works!
+					</aside>
+				</section>
 
 				<!-- End-to-End Encryption -->
 				<section data-background-image="images/architecture-peer-to-peer-briar.svg" data-background-size="contain">
 					<aside class="notes" data-markdown>
 						* Authenticated Stream Cipher with 256 bit keys
 						* Forward Secrecy (periodic key rotation due to delay tolerance, ratcheting planned)
-						* [Bramble Transport Protocol](https://code.briarproject.org/akwizgran/briar-spec/blob/master/protocols/BTP.md) (BTP)
 						* How to exchange shared secret?
+<!--
+						* [Bramble Transport Protocol](https://code.briarproject.org/akwizgran/briar-spec/blob/master/protocols/BTP.md) (BTP)
+-->
 					</aside>
 				</section>
 
@@ -185,9 +220,11 @@
 					<aside class="notes" data-markdown>
 						* meeting in person and scanning QR codes as initial key exchange
 						* prevents MITM attacks (also a threat)
-						* trusted peer can introduce two contacts
-						* future: Scanning codes or entering tokens remotely
+						* Also: Trusted peer can introduce two contacts
+						* Future: Scanning codes or entering tokens remotely
+<!--
 						* [Bramble QR Code Protocol](https://code.briarproject.org/akwizgran/briar-spec/blob/master/protocols/BQP.md) (BQP)
+-->
 					</aside>
 				</section>
 
@@ -218,12 +255,17 @@
 				<section data-background-image="images/internet-can-i-haz.jpg" data-background-size="contain"></section>
 				<section data-background-image="images/logo-tor.svg" data-background-size="contain">
 					<aside class="notes" data-markdown>
+						* integrated in Briar
+						* runs an onion service on your phone
+					</aside>
+				</section>
+				<section data-background-image="images/graph-tor.svg" data-background-size="contain">
+					<aside class="notes" data-markdown>
 					* connection between peers consists of 6 Tor relays (3 picked by each peer)
 					* hides metadata even from network observers (maybe not NSA)
 					* still room for improvements (e.g. timing attacks)
 					</aside>
 				</section>
-				<section data-background-image="images/graph-tor.svg" data-background-size="contain"></section>
 
 				<!-- Message Synchronisation -->
 				<section data-background-image="images/briar-groups-messages.svg" data-background-size="contain">
@@ -231,9 +273,26 @@
 						Groups (Channels) and Messages
 					</aside>
 				</section>
-				<section data-background-image="images/briar-forums.svg" data-background-size="contain"></section>
-				<section data-background-image="images/graph-p2p-sharing.svg" data-background-size="contain"></section>
-				<section data-background-image="images/graph-p2p-sharing-partition.svg" data-background-size="contain"></section>
+				<section data-background-image="images/briar-forums.svg" data-background-size="contain">
+					<aside class="notes" data-markdown>
+						Forums
+						* everybody can read and post
+						* everybody can share forum with their peers
+					</aside>
+				</section>
+				<section data-background-image="images/graph-p2p-sharing.svg" data-background-size="contain">
+					<aside class="notes" data-markdown>
+						* social graph of one forum
+						* green peers are online
+						* edges are sharing relationships, enable message flow
+					</aside>
+				</section>
+				<section data-background-image="images/graph-p2p-sharing-partition.svg" data-background-size="contain">
+					<aside class="notes" data-markdown>
+						* no single truth of forum state
+						* two separate discussions in threads are merged when partitions reconnect
+					</aside>
+				</section>
 
 				<!-- Architecture -->
 				<section data-background-image="images/briar-architecture-simple.png" data-background-size="contain">
@@ -243,7 +302,7 @@
 				</section>
 				<section data-background-image="images/decentralize-all-the-things.jpg" data-background-size="contain"></section>
 
-				<!- Try it now! -->
+				<!-- Try it now! -->
 				<section>
 					<p>
 						<a href="https://briarproject.org" style="color: white;">briarproject.org</a>
@@ -263,7 +322,7 @@
 					</aside>
 				</section>
 
-				<!- The End -->
+				<!-- The End -->
 				<section style="font-size: 72pt;">
 					The End
 					<br/><br/>
@@ -284,14 +343,14 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: false,
-				progress: false,
+				progress: true,
 				history: true,
 				center: true,
 				slideNumber: 'c/t',
 				showSlideNumber: 'speaker', // all/speaker/print
 				touch: true,
 				loop: false,
-				showNotes: true,
+				showNotes: true, //false,
 				viewDistance: 3,
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
