Fix PDF output of Roadsec presentation

--- a/2018-03-03_Cryptomessenger_at_Roadsec_Belem.html
+++ b/2018-03-03_Cryptomessenger_at_Roadsec_Belem.html
@@ -137,7 +137,7 @@
 				<section>
 					<img src="images/logo-EFF.svg"/>
 					<br/>
-					<img src="images/EFF-scorecard.png"/>
+					<img src="images/EFF-scorecard.png" width="800"/>
 					<br/>
 					<a href="https://eff.org/secure-messaging-scorecard" target="_blank" style="font-size:75%">
 						https://eff.org/secure-messaging-scorecard
@@ -145,8 +145,8 @@
 				</section>
 
 				<!-- Metadata 1 -->
-				<section style="font-size: 65pt;">
-					Metadata
+				<section style="font-size: 64pt;">
+					<p>Metadata</p>
 					<img data-src="images/metadata-graph.png" class="stretch"/>
 
 					<aside class="notes" data-markdown>
@@ -159,6 +159,7 @@
 				</section>
 
 				<!-- Metadata 2 -->
+				<!--
 				<section>
 					<video class="stretch" data-autoplay>
 						<source data-src="videos/kill-people-based-on-metadata.webm" type="video/webm" />
@@ -168,6 +169,7 @@
 						former director of CIA and NSA
 					</span>
 				</section>
+				-->
 				<section>
 					<img data-src="images/metadata-hayden.jpg" class="stretch"/>
 					<blockquote>
